added summary and dataset variables description

--- a/Data Preparation and Visualisation.ipynb
+++ b/Data Preparation and Visualisation.ipynb
@@ -5,32 +5,147 @@
    "id": "032f4f0b",
    "metadata": {},
    "source": [
-    "# Finding key factors that predict an exoplanet's distance from its host star\n",
+    "# Predicting an exoplanet's distance from its host star\n",
     "\n",
     "### Group Name: SPACE!\n",
     "Ben Rycroft (s3947135)\n",
     "\n",
     "Rita Lam Cordeiro (s3471881)\n",
     "\n",
-    "### Introduction\n",
+    "## Table of Contents\n",
     "\n",
-    "**Dataset Source**\n",
+    "- Introduction\n",
+    "    - Dataset Source\n",
+    "    - Dataset Details\n",
+    "    - Dataset Features\n",
+    "    - Dataset Variables\n",
+    "- Goals and Objectives\n",
+    "- Data Cleaning and Preprocessing\n",
+    "- Summary and Conclusion\n",
+    "- References\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "#### Dataset Source\n",
+    "\n",
+    "**website:** https://exoplanetarchive.ipac.caltech.edu  \n",
     "\n",
     "The NASA Exoplanet archive compiles data on all known exoplanets and their host stars including exoplanet parameters, stellar parameters and, discovery/characterization data. \n",
     "\n",
-    "This archive includes three data sets: \"List of All known planets and hosts\", \"List of all Kepler Objects of Interest (KOIs)\", and \"List of all Kepler Threshold-Crossing Events (TCEs). We have chosen to solely use \"List of All known planets and hosts\" for this project\n",
+    "This archive includes three data sets: \"List of All known planets and hosts\", \"List of all Kepler Objects of Interest (KOIs)\", and \"List of all Kepler Threshold-Crossing Events (TCEs). We have chosen to solely use \"List of All known planets and hosts\" for this project.\n",
     "\n",
     "\n",
-    "**Dataset Details**\n",
+    "### Dataset Details\n",
     "\n",
-    "Each row in the dataset represents an exoplanet. This dataset has _ columns: \n",
+    "Due to large amount of NaN values we have decided to split the data into subsets which focus on corellating different sets of values with a planet's distance from its host star, this is our response variable. There are 11 subsets in our dataset, they include the value of the observed attribute and the upper and lower\n",
     "\n",
-    "Due to large amount of NaN values we have decided to split the data into subsets which focus on corellating a value with a planet's distance from its host star. "
+    "### Dataset Variables\n",
+    "\n",
+    "following is a summary of each subset and its collumns, unit names are in brackets.\n",
+    "\n",
+    "**rad (Radius):**  \n",
+    "Data Type: numeric   \n",
+    "[Earth Radius]: Earth Radius is a measure of planetary radius that describes how many earth radii  an exoplanet's radius is equal to  \n",
+    "\n",
+    "pl_rade:        Planet Radius  \n",
+    "pl_radeerr1:    Planet Radius Upper Uncertainty   \n",
+    "pl_radeerr2:    Planet Radius Lower Uncertainty  \n",
+    "pl_radelim:     Planet Radius Limit Flag  \n",
+    "\n",
+    "**mass:**  \n",
+    "Data Type: numeric  \n",
+    "[Earth Mass]  Earth Mass is a measure of planetary Mass that describes how many earth masses an exoplanet's radius is equal to\n",
+    "\n",
+    "pl_masse:       Planet Mass  \n",
+    "pl_masseerr1:   Planet Mass Upper Uncertainty  \n",
+    "pl_masseerr2:   Planet Mass Lower Uncertainty  \n",
+    "pl_masselim:    Planet Mass Limit Flag  \n",
+    "\n",
+    "**dens (Density):**  \n",
+    "Data Type: numeric  \n",
+    "[g/cm^3]: grammes per centimeter cubed.  \n",
+    "\n",
+    "pl_dens:        Planet Density  \n",
+    "pl_denserr1:    Planet Density Upper Uncertainty\n",
+    "pl_denserr2:    Planet Density Lower Uncertainty\n",
+    "pl_denslim:     Planet Density Limit Flag  \n",
+    "\n",
+    "**orbeccen (Orbit Eccentricity):**    \n",
+    "Data Type: numeric  \n",
+    "[eccentricity]: the measure deviation of an orbit from circularity, the closer to 1, the more circular.  \n",
+    "\n",
+    "pl_orbeccen:    Eccentricity  \n",
+    "pl_orbeccenerr1: Eccentricity Upper Uncertainty  \n",
+    "pl_orbeccenerr2: Eccentricity Lower Uncertainty  \n",
+    "pl_orbeccenlim: Eccentricity Limit Flag  \n",
+    "\n",
+    "**insol (Insolation):**  \n",
+    "Data Type: numeric  \n",
+    "[Earth Flux]: Flux measures how much light energy is being radiated in a given area. \n",
+    "\n",
+    "pl_insol:       Insolation Flux   \n",
+    "pl_insolerr1:   Insolation Flux Upper Uncertainty   \n",
+    "pl_insolerr2:   Insolation Flux Lower Uncertainty   \n",
+    "pl_insollim:    Insolation Flux Limit Flag  \n",
+    "\n",
+    "**eqt (Equilibrium Temperature):**  \n",
+    "Data Type: numeric  \n",
+    "[K]: Kelvin, a measure of temperature. \n",
+    "\n",
+    "pl_eqt:         Equilibrium Temperature  \n",
+    "pl_eqterr1:     Equilibrium Temperature Upper Uncertainty  \n",
+    "pl_eqterr2:     Equilibrium Temperature Lower Uncertainty  \n",
+    "pl_eqtlim:      Equilibrium Temperature Limit Flag  \n",
+    "\n",
+    "**teff (Stellar Effective Temperature):**   \n",
+    "Data Type: numeric  \n",
+    "[K]: Kelvin, a measure of temperature.\n",
+    "\n",
+    "st_teff:        Stellar Effective Temperature   \n",
+    "st_tefferr1:    Stellar Effective Temperature Upper Unc.   \n",
+    "st_tefferr2:    Stellar Effective Temperature Lower Unc.   \n",
+    "st_tefflim:     Stellar Effective Temperature Limit Flag  \n",
+    "\n",
+    "**radst (Radius of Star):**      \n",
+    "Data Type: numeric   \n",
+    "[Solar Radius]:  Solar Radius is a measure of stellar radius that describes how many Solar radii a Star's radius is equal to.  \n",
+    "\n",
+    "st_rad:         Stellar Radius    \n",
+    "st_raderr1:     Stellar Radius Upper Uncertainty   \n",
+    "st_raderr2:     Stellar Radius Lower Uncertainty   \n",
+    "st_radlim:      Stellar Radius Limit Flag  \n",
+    "\n",
+    "**massst (Mass of Star):**     \n",
+    "Data Type: numeric  \n",
+    "[Solar mass]: Solar Mass is a measure of stellar mass that describes how many solar masses a Star's radius is equal to.    \n",
+    "\n",
+    "st_mass:        Stellar Mass   \n",
+    "st_masserr1:    Stellar Mass Upper Uncertainty   \n",
+    "st_masserr2:    Stellar Mass Lower Uncertainty   \n",
+    "st_masslim:     Stellar Mass Limit Flag  \n",
+    "\n",
+    "**met (Metallicity):**   \n",
+    "Data Type: numeric  \n",
+    "[dex]: decimal exponent, measures the abundance of metal in a star.\n",
+    "\n",
+    "st_met:         Stellar Metallicity   \n",
+    "st_meterr1:     Stellar Metallicity Upper Uncertainty   \n",
+    "st_meterr2:     Stellar Metallicity Lower Uncertainty  \n",
+    "st_metlim:      Stellar Metallicity Limit Flag  \n",
+    "\n",
+    "**agest (Stellar Age):**  \n",
+    "Data Type: numeric  \n",
+    "[Gyr]: Giga year (one billion years), the age of the star.\n",
+    "\n",
+    "st_age:         Stellar Age   \n",
+    "st_ageerr1:     Stellar Age Upper Uncertainty   \n",
+    "st_ageerr2:     Stellar Age Lower Uncertainty  \n",
+    "st_agelim:      Stellar Age Limit Flag  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "66e476e0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c136bf27",
    "metadata": {},
    "outputs": [],
@@ -74,7 +189,7 @@
     "Preparing the data for modelling\n",
     "\n",
     "### Step 1\n",
-    "The https://exoplanetarchive.ipac.caltech.edu site where the data was colected from required us to specify what columns of the larger dataset that we needed to download. We only selected the relevent columns that we wanted to investigate and we also excluded datapoints like names of planets and stars. \n",
+    "The site where the data was colected from required us to specify what columns of the larger dataset that we needed to download. We only selected the relevent columns that we wanted to investigate and we also excluded datapoints like names of planets and stars. \n",
     "\n",
     "### Step 2 \n",
     "Here are the columns of the dataset"
@@ -82,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "d7a1ef60",
    "metadata": {},
    "outputs": [
@@ -104,7 +219,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "91e3387f",
    "metadata": {},
    "outputs": [],
@@ -152,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4b7a418d",
    "metadata": {},
    "outputs": [],
@@ -174,6 +289,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab189840",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e1b228",
    "metadata": {},
    "outputs": [],
    "source": []
