wrote goals and objectives

--- a/Data Preparation and Visualisation.ipynb
+++ b/Data Preparation and Visualisation.ipynb
@@ -140,7 +140,13 @@
     "st_age:         Stellar Age   \n",
     "st_ageerr1:     Stellar Age Upper Uncertainty   \n",
     "st_ageerr2:     Stellar Age Lower Uncertainty  \n",
-    "st_agelim:      Stellar Age Limit Flag  "
+    "st_agelim:      Stellar Age Limit Flag  \n",
+    "\n",
+    "### Goals and Objectives \n",
+    "There is a lot we can tell about a planet based on the distance from its star, we aim to further our insight into how solar systems are formed and look for patterns and clues in order to attempt get a better picture of the history of our universe. \n",
+    "\n",
+    "The main objective of this project is to be able to predict an exoplanet's distance from its host star as well as to identify what values are best suited for making this prediction.\n",
+    "\n"
    ]
   },
   {
@@ -294,12 +300,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7e1b228",
+   "cell_type": "markdown",
+   "id": "af5d9e16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Summary & Conclusion\n",
+    "\n",
+    "### Reference  "
+   ]
   }
  ],
  "metadata": {
