--- a/Data Preparation and Visualisation.ipynb
+++ b/Data Preparation and Visualisation.ipynb
@@ -241,7 +241,7 @@
    "id": "b494ae7a",
    "metadata": {},
    "source": [
-    "There are many different variables that we intend to compare to orbit and not every row has values for every column this is why we decided to split the dataset into lots of smaller datasets each only compairing one verable against the orbit radius. This way we can remove all the rows with null values from each of the datasubsets without removing the rows from other datasubsets. "
+    "There are many different variables that we intend to compare to orbit and not every row has values for every column this is why we decided to split the dataset into lots of smaller datasets each only compairing one variable against the orbit radius. This way we can remove all the rows with null values from each of the datasubsets without removing the rows from other data subsets. "
    ]
   },
   {
@@ -773,11 +773,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75a2741c",
+   "cell_type": "markdown",
+   "id": "d34c35d7",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -797,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
