--- a/Data Preparation and Visualisation.ipynb
+++ b/Data Preparation and Visualisation.ipynb
@@ -889,11 +889,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d00b4c0",
+   "id": "5b47c058",
    "metadata": {},
    "source": [
     "### Summary and Conclusions\n",
-    "\tWe found that the strongest predictors of Planet Orbital Radius was equillibrium temperature (negative corellation) , planet radius (negative correlation) and orbital eccentricity (positive correlation). This means the cooler, smaller and more eccentric a planet is the larger the larger its orbital radius. This matches with what we would expect, however the values that we see for the r^2 are lower than we would expect (maximum being 0.104 for equillibrium temperature). As our data set has a large margin of error we encountered the issue of finding weak corellations and incomplete data. We will consider exploring more data sets for phase 2 and revising the graphing we did in phase 1 in order to account for this margin \n",
+    "\tWe found that the strongest predictors of Planet Orbital Radius was equillibrium temperature (negative corellation) , planet radius (negative correlation) and orbital eccentricity (positive correlation). This means the cooler, smaller and more eccentric a planet is the larger the larger its orbital radius. This matches with what we would expect, however the values that we see for the r^2 are lower than we would expect (maximum being 0.104 for equillibrium temperature). \n",
+    "    \n",
+    "    As our data set has a large margin of error we encountered the issue of finding weak corellations and incomplete data. We will consider exploring more data sets for phase 2 and revising the graphing we did in phase 1 in order to account for this margin of error, fix mistakes and find more insightful conclusions to derive from the data.\n",
     "\n",
     "### References\n",
     "\t“List of all known planets and hosts” [database] (n.d). Retrieved 2nd of October 2022 from https://exoplanetarchive.ipac.caltech.edu/index.html"
