--- a/Data Preparation and Visualisation.ipynb
+++ b/Data Preparation and Visualisation.ipynb
@@ -726,7 +726,8 @@
     "\n",
     "plt.plot(met['pl_orbper'], intercept + slope*met['pl_orbper'], 'r', label='fitted line')\n",
     "plt.legend(['Data', f'Trend Line R^2:{str(r_value**2)[0:5]}'])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "[1] Standard Errors assu"
    ]
   },
   {
